--- a/y-kien/xa-hoi-thong-tin.html
+++ b/y-kien/xa-hoi-thong-tin.html
@@ -364,7 +364,7 @@ data-ad-slot="3830899615">
 <p>Để sử dụng một hệ thống thông tin to lớn như vậy một cách an toàn thì phải có nhiều biện pháp bảo mật thông tin, nhất là hệ thống lưu trữ chữ ký số. Một số biện pháp an ninh sau đây cần phải áp dụng để bảo vệ hệ thống lưu trữ chữ ký số: máy tính phải được đặt trong phòng chống bom, chống mọi sự đột nhập kể cả cách đào hầm từ lòng đất, chỉ những người có trách nhiệm mới được vào phòng và mỗi lần vào đều phải có giấy phép của giám đốc, phải có người làm chứng và phải ghi nhật ký công việc, không được đem thiết lưu trữ loại tháo được (thẻ nhớ, băng từ…) vào phòng, những thiết bị lưu trữ đã hết hạn sử dụng phải được xoá hết dữ liệu trước khi đem ra ngoài, hệ thống được sao lưu và kiểm tra định kỳ để kịp thời phát hiện mọi sự xâm nhập.</p>
 
   <hr>
-
+Hit counter <amp-img width="100" height="24" src="https://c.statcounter.com/12598906/0/9a8e736a/0/";></amp-img>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
   <br>
