--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@ data-ad-slot="5275186684">
         <div class="lrsp">
           <h1>Tổng-quát</h1>
           <p class="mbr-text style display-7">
-Đây là trang-web cá-nhân của <a href="home/cv">Lê Hồng Bội</a>, nơi chia-sẻ những kiến-thức-quản-lý <a href="/huu-ich/">tài-chính-gia-đình</a>, kinh-nghiệm sử-dụng máy-tính và vài thứ trong cuộc-sống…
-<br>Đặc-biệt nhất là công-cụ tính <a href="huu-ich/ke-hoach-tai-chinh/">lộ-trình-tài-chính tối-ưu cho suốt cuộc-đời</a>. Mỗi người đều tự tính được tổng-số tài-sản cần có ở mỗi thời-điểm trong suốt cuộc-đời, và cách tích-luỹ để có số tài-sản đó.
+Đây là trang-web cá-nhân của <a href="home/cv">Lê Hồng Bội</a>, nơi chia-sẻ những kiến-thức-quản-lý <a href="/huu-ich/">tài-chính-gia-đình</a>, kinh-nghiệm sử-dụng <a href="kinh-nghiem/may-tinh">máy-tính</a> và vài thứ trong <a href="kinh-nghiem/linh-tinh">cuộc-sống</a>…
+<br>Đặc-biệt nhất là công-cụ tính <a href="huu-ich/ke-hoach-tai-chinh/">lộ-trình-tài-chính tối-ưu cho suốt cuộc-đời</a>. Mỗi người đều tự tính được tổng-số tài-sản cần có ở mỗi thời-điểm trong suốt cuộc-đời, và cách <a href="huu-ich/tich-luy">tích-luỹ</a> để có số tài-sản đó.
           </p>
         </div>
       </div>
