--- a/kinh-nghiem/may-tinh/RCS.html
+++ b/kinh-nghiem/may-tinh/RCS.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Trang-web LHBội</title>
-<meta name="description" content="Trang-web cá-nhân Lê Hồng Bội, chia-sẻ những thông-tin hữu-ích nhằm làm cho xã-hội tốt hơn" />
-<meta name="keywords" content="hữu-ích, tài-chính-cá-nhân, đầu-tư, tiết-kiệm, làm giàu chắc-chắn">
-<link rel="alternate" href="https://www.lhboi.name.vn/">
-<link rel="canonical" href="https://lehboi.github.io/">
+<title>Nhắn tin miễn phí với RCS</title>
+<meta name="description" content="Nhắn tin miễn phí với RCS" />
+<meta name="keywords" content="RCS, SMS, Android, Google, file">
+<link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/RCS">
+
 <!-- in head of html file -->
 <meta charset='utf-8'>
 
@@ -135,45 +135,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 }
 
-.container{padding: 8px 0px 8px 0px; width: 100%;margin-right: auto;margin-left: auto;}
-.resizeblock{max-width: 80%;width: 50%;}
-.vcenter{margin: auto;}
-
-.mbr-row{display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display: flex;-webkit-flex-wrap: wrap;-ms-flex-wrap: wrap;flex-wrap: wrap;flex-direction: row;margin-right: 0px;margin-left: 0px;}
-.mbr-justify-content-center{justify-content: center;}
-
-@media (max-width: 639px){
-.mbr-col-sm-2{-ms-flex: 0 0 16.666667%;flex: 0 0 16.666667%;max-width: 16.666667%;padding: 0px 0px 0px 0px;}
-.mbr-col-sm-8{-ms-flex: 0 0 66.666667%;flex: 0 0 66.666667%;max-width: 66.666667%;padding: 0px 0px 0px 0px;}
-.mbr-col-sm-12{-ms-flex: 0 0 100%;flex: 0 0 100%;max-width: 100%;padding: 0px 0px 0px 0px;}
-.mbr-row{margin: 0;}
-}
-@media (min-width: 640px){
-.mbr-col-md-3{-ms-flex: 0 0 25%;flex: 0 0 25%;max-width: 25%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-4{-ms-flex: 0 0 33.333333%;flex: 0 0 33.333333%;max-width: 33.333333%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-5{-ms-flex: 0 0 41.666667%;flex: 0 0 41.666667%;max-width: 41.666667%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-6{-ms-flex: 0 0 50%;flex: 0 0 50%;max-width: 50%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-7{-ms-flex: 0 0 58.333333%;flex: 0 0 58.333333%;max-width: 58.333333%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-8{-ms-flex: 0 0 66.666667%;flex: 0 0 66.666667%;max-width: 66.666667%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-9{-ms-flex: 0 0 75%;flex: 0 0 75%;max-width: 75%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-10{-ms-flex: 0 0 83.333333%;flex: 0 0 83.333333%;max-width: 83.333333%;padding: 0px 0px 0px 0px;}
-.mbr-col-md-12{-ms-flex: 0 0 100%;flex: 0 0 100%;max-width: 100%;padding: 0px 0px 0px 0px;}
-}
-
-@media (min-width: 960px){
-.mbr-col-lg-2{-ms-flex: 0 0 16.666667%;flex: 0 0 16.666667%;max-width: 16.666667%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-3{-ms-flex: 0 0 25%;flex: 0 0 25%;max-width: 25%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-4{-ms-flex: 0 0 33.33%;flex: 0 0 33.33%;max-width: 33.33%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-5{-ms-flex: 0 0 41.666%;flex: 0 0 41.666%;max-width: 41.666%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-6{-ms-flex: 0 0 50%;flex: 0 0 50%;max-width: 50%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-7{-ms-flex: 0 0 58.333333%;flex: 0 0 58.333333%;max-width: 58.333333%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-8{-ms-flex: 0 0 66.666667%;flex: 0 0 66.666667%;max-width: 66.666667%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-9{-ms-flex: 0 0 75%;flex: 0 0 75%;max-width: 75%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-10{-ms-flex: 0 0 83.3333%;flex: 0 0 83.3333%;max-width: 83.3333%;padding: 0px 0px 0px 0px;}
-.mbr-col-lg-12{-ms-flex: 0 0 100%;flex: 0 0 100%;max-width: 100%;padding: 0px 0px 0px 0px;}
-}
-
-
 </style>
 </head>
 
@@ -248,13 +209,10 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
-<div class="body">
-  <div class="title">Giới-thiệu</div>
+  <div class="body">
+    <div class="title">Nhắn tin miễn phí với RCS</div>
+<div class="right">Viết lần đầu trong Tháng Tư, 2021.</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
@@ -268,124 +226,62 @@ data-ad-slot="5275186684">
       layout="fixed"
       data-layout="button_count"
       data-href=
-"https://lehboi.github.io"
+"https://www.lhboi.name.vn/kinh-nghiem/may-tinh/RCS"
     >
     </amp-facebook-like>
   </div>
 
-
-  <div class="container">
-    <div class="mbr-row mbr-justify-content-center">
-      <div class="mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12 resizeblock vcenter">
-        <div class="lrsp">
-          <h1>Tổng-quát</h1>
-          <p class="mbr-text style display-7">
-Đây là trang-web cá-nhân của <a href="home/cv">Lê Hồng Bội</a>, nơi chia-sẻ những kiến-thức-quản-lý <a href="/huu-ich/">tài-chính-gia-đình</a>, kinh-nghiệm sử-dụng <a href="kinh-nghiem/may-tinh">máy-tính</a> và vài thứ trong <a href="kinh-nghiem/linh-tinh">cuộc-sống</a>…
-<br>Đặc-biệt nhất là công-cụ tính <a href="huu-ich/ke-hoach-tai-chinh/">lộ-trình-tài-chính tối-ưu cho suốt cuộc-đời</a>. Mỗi người đều tự tính được tổng-số tài-sản cần có ở mỗi thời-điểm trong suốt cuộc-đời, và cách <a href="huu-ich/tich-luy">tích-luỹ</a> để có số tài-sản đó.
-          </p>
-        </div>
-      </div>
-      <div class="mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12 resize vcenter">
-        <div class="lrsp">
-          <div class="vcenter">
-            <a href="huu-ich/ke-hoach-tai-chinh/"><amp-img src="images/KHTCp1.png" alt="Lộ-trình-tài-chính điển-hình" width="600" height="371" layout="responsive"></amp-img></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <h1>Các nội-dung nổi-bật của website:</h1>
-
-  <div class="container">
-    <div class="mbr-row mbr-justify-content-center">
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
-        <div class="lrsp">
-          <a href="huu-ich/nghi-luc"><amp-img src="images/bookkeeping.jpeg" layout="responsive" height="233" width="350" alt="Ghi sổ"></amp-img></a>
-          <div class="center"><h2>Nghị-lực để có dư tiền</h2></div>
-          <p>Nghị-lực để chọn giữa sự thoả-mãn trước-mắt và lợi-ích lâu-dài.
-	  <br><a href="huu-ich/nghi-luc">Nghị-lực</a> sẽ giúp bạn lập ngân-sách, kiểm-soát chi-tiêu, tích-luỹ đầu-tư lâu-dài và trở nên giàu.
-          </p>
-        </div>
-      </div>
-
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
-        <div class="lrsp">
-          <a href="huu-ich/hieu-qua-dau-tu"><amp-img src="images/goldcoingrow.jpg" layout="responsive" height="233" width="350" alt="Long-term investment"></amp-img></a>
-          <div class="center"><h2>Tính hiệu-quả khi đầu-tư</h2></div>
-          <p>So-sánh <a href="huu-ich/hieu-qua-dau-tu">hiệu-quả các vụ đầu-tư</a> từ năm 2002 của tôi.
-          <br>Hiệu-quả của việc đầu-tư được tính bằng tốc-độ tăng tài-sản chứ không phải lượng tài-sản tăng thêm.
-          </p>
-        </div>
-      </div>
-
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
-        <div class="lrsp">
-          <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"><amp-img src="data/VFM.png" layout="responsive" height="233" width="350" alt="Kết-quả quỹ-đầu-tư"></amp-img></a>
-          <div class="center"><h2>Gửi ngân-hàng hay quỹ-đầu-tư</h2></div>
-          <p>So-sánh lợi-nhuận của <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">gửi tiết-kiệm và quỹ-đầu-tư</a>.
-          <br>Gửi ngân-hàng ngắn-hạn và gửi quỹ-đầu-tư dài-hạn là thích-hợp nhất.
-          </p>
-        </div>
-      </div>
-
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
-        <div class="lrsp">
-          <a href="kinh-nghiem/may-tinh/privcloudstor"><amp-img src="images/Nextcloud_ex.png" layout="responsive" height="233" width="350" alt="Nextcloud"></amp-img></a>
-          <div class="center"><h2>Tự làm cloud storage server</h2></div>
-          <p>Dùng một máy-tính cũ và yếu làm một <a href="kinh-nghiem/may-tinh/privcloudstor">cloud storage server</a> cho cá-nhân hoặc nhóm ít người như gia-đình với dung-lượng-lưu-trữ tuỳ theo nhu-cầu, từ vài trăm GB trở lên đến vài TB.
-          </p>
-        </div>
-      </div>
-
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
-        <div class="lrsp">
-          <a href="kinh-nghiem/may-tinh/protect"><amp-img src="images/fidokey.png" layout="responsive" height="233" width="350" alt="FIDO keys"></amp-img></a>
-          <div class="center"><h2>Bảo-vệ tài-sản-số</h2></div>
-          <p>Tìm-hiểu kỹ hơn về những loại tài-sản trong thời-đại số-hoá, những rủi-ro làm mất những tài-sản đó, và <a href="kinh-nghiem/may-tinh/protect">những cách bảo-vệ</a> tài-khoản-ngân-hàng và tài-khoản-dịch-vụ-online, và cách chuyển-giao tài-sản-số lại cho người khác.
-          </p>
-        </div>
-      </div>
-
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
-        <div class="lrsp">
-          <a href="kinh-nghiem/may-tinh/pi-network"><amp-img src="images/pi-network_ex.jpg" layout="responsive" width="350" height="233" alt="Pi"></amp-img></a>
-          <div class="center"><h2>Tiền-mật-mã Pi</h2></div>
-          <p>Bài <strong><span class="red">MỚI</span></strong>: Giới-thiệu <a href="kinh-nghiem/may-tinh/pi-network">tiền-mật-mã cho mọi người: Pi</a>.
-          <br>Một loại tiền-mật-mã mà mọi người trên toàn thế-giới đều dùng được một cách dễ-dàng.
-          </p>
-        </div>
-      </div>
-
-    </div>
-  </div>
- 
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
+<!-- body here -->
+<p>Bây giờ người dùng đã quá quen thuộc với các <a href="OTT-apps">app dùng để liên lạc miễn phí qua Internet</a> rồi, giới thiệu thêm một app nữa thì sẽ có ít người quan tâm. Bài viết này sẽ nêu lên những ưu điểm của RCS so với các app kia để mọi người có thêm sự lựa chọn.</p>
+<h1>RCS là gì?</h1>
+<p>RCS (Rich Communication Services) là dịch vụ nhắn tin được GSMA (Hiệp hội GSM) thiết kế để thay thế SMS và MMS. Ngoài những dòng chữ, RCS gửi được nhiều thứ khác: file, hình, âm thanh, contact, toạ độ… RCS còn cho chat theo group.</p>
+<p>Đáng lẽ  việc cung cấp dịch vụ RCS thuộc về các nhà mạng di động giống như SMS (và thu phí trên mỗi tin nhắn như SMS, MMS), nhưng các mạng di động đã rất chậm chạp trong việc triển khai RCS; và Google nhảy vào cung cấp dịch vụ RCS qua Internet <b>hoàn toàn miễn phí</b> khi dùng sóng Wi-fi (chỉ tốn cước mobile data khi không có Wi-fi). Google gọi dịch vụ RCS là <b>Chat</b>. Dịch vụ RCS này chỉ có trên Android. Trên iOS đã có dịch vụ iMessage với những tính năng tương tự nhưng hai bên không trao đổi với nhau; Apple đang cân nhắc đưa RCS vào iOS.</p>
+<h1>Ưu điểm của RCS</h1>
+<h2>Những ưu điểm giống như các app khác</h2>
+<ul>
+<li>miễn phí</li>
+<li>gửi file</li>
+<li>gửi khắp thế giới</li>
+</ul>
+<h2>Không cần cài thêm app</h2>
+Bạn chỉ cần dùng app Messages của Google để gửi SMS, MMS, RCS. Không cần thêm app khác.
+<h2>Không cần tạo account</h2>
+Bạn không cần phải ghi nhớ thêm username và password.
+<h2>Không sợ bị hack</h2>
+Vì không có username và password nên bạn không sợ bị hack qua web. Tuy nhiên vẫn còn rủi ro bị lừa mất số điện thoại.
+<h2>Các tính năng tích hợp trong app</h2>
+Ngoài gửi file, app còn tích hợp tính năng để lấy những thông tin thường dùng gắn vào tin nhắn.
+<h1>Cài đặt RCS</h1>
+<h2>Cài app Messages của Google</h2>
+Cài app từ <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.messaging" target='_blank'>Play Store</a>.
+<br>Nếu máy Android của bạn có cài sẵn một app khác để làm SMS thì bạn cần phải vào Settings để chọn Messages của Google là default SMS app. Để tránh lẫn lộn giữa hai app, bạn nên disable SMS app có sẵn trong máy.
+<br>Nếu máy của bạn gắn hai SIM thì RCS chỉ dùng được với SIM1. Bạn phải chọn dùng mobile data qua SIM1, chọn gọi đi qua SIM1 hoặc "Ask every time", không được chọn gọi đi qua SIM2. Nếu máy của bạn chỉ có một SIM thì chỉ cần chọn dùng mobile data.
+<h2>Chọn dùng RCS</h2>
+Mở app Messages của Google,
+<br>Chọn menu <b>⋮</b> ở góc trên bên phải,
+<br>Chọn Settings,
+<br>Chọn General,
+<br>Bấm vào Chat features,
+<br>Bật Enable chat features lên.
+<br>Vậy là bạn đã sẵn sàng dùng RCS.
+<h1>Dùng RCS</h1>
+Trong app Messages, bạn chọn <b>Start chat</b> để bắt đầu soạn tin,
+<br>Gõ số điện thoại hoặc tên người trong Contacts vào dòng To, để tạo một nhóm chat có hơn hai người thì bấm vào hình người có dấu + ở cuối dòng To rồi lần lượt thêm số điện thoại hoặc tên người,
+<br>Ô gõ nội dung tin nhắn ở dưới đáy màn hình sẽ cho biết bên nhận tin có dùng RCS hay không. Nếu trong ô đó có chữ Chat tức là tất cả những số điện thoại nhận tin đều có dùng RCS. Nếu trong ô đó có chữ Text tức là có ít nhất một số điện thoại nhận tin không dùng RCS, bạn nên mời người dùng số điện thoại đó dùng RCS để có được những ưu điểm kể trên.
+<br>Bạn có thể soạn tin RCS dài hơn SMS rất nhiều, không hạn chế số chữ.
+<br>Trong app Messages có tích hợp sẵn các tính năng để gắn thêm vào tin nhắn:
+<ul>
+<li>hình chụp ngay qua camera</li>
+<li>các emoticon và các hình GIF theo các chủ đề khác nhau</li>
+<li>toạ độ hiện thời của máy</li>
+<li>tình hình thời tiết</li>
+<li>các quán ăn, rạp chiếu phim quanh đó</li>
+<li>thông tin về một người trong Contact</li>
+<li>file</li>
+</ul>
+Nếu bạn gửi tin nhắn chat đến một nhóm người thì tin nhắn trả lời của từng người đều đến cả nhóm, rất thuận tiện cho trao đổi chung trong nhóm. 
+<h1>RCS thiếu tính năng voice chat</h1>
+Hầu hết các app gửi tin nhắn qua Internet khác đều có luôn tính năng voice chat hoặc gửi voice mail. Messages của Google không có tính năng voice. Để voice chat bạn cần dùng Google Duo. Khi cài Google Duo vào cùng với Messages thì trong app Messages sẽ có các icon để voice và video chat.
   <hr>
 Hit count <amp-iframe width="120" height="30" frameborder="0" 
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
@@ -401,7 +297,7 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang web này, hãy ghi nguồn-gốc <a href="https://www.lhboi.name.vn">https://WWW.LHBOI.NAME.VN</a> hoặc <a href="https://lehboi.github.io">https://LEHBOI.GITHUB.IO</a> để người-đọc có-thể tìm được nội-dung mới cập-nhật.
   </div>
 </div>
 <amp-analytics type="googleanalytics">
@@ -417,7 +313,6 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   }
   </script>
 </amp-analytics>
-
 </main>
 </body>
 </html>
