--- a/home/about.html
+++ b/home/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Thân-thế LHBội</title>
+<title>Thân-thế</title>
 <meta name="description" content="Thân-thế Lê Hồng Bội, tư-vấn tài-chính-gia-đình" />
 <meta name="keywords" content="about">
 <link rel="alternate" href="https://www.lhboi.name.vn/home/about">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -166,6 +166,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -237,15 +238,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Thân-thế</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -263,6 +257,7 @@ https://lehboi.github.io/home/about
     </amp-facebook-like>
   </div>
 
+  <h1>Thân-thế</h1>
   <br>
   <table>
   <tbody>
