--- a/home/cv.html
+++ b/home/cv.html
@@ -2,7 +2,7 @@
 <html amp lang="vi">
 <html lang='vi'>
 <head>
-<title>Thành-tích LHBội</title>
+<title>Thành-tích của Lê Hồng Bội</title>
 <meta name="description" content="Kinh-nghiệm của Lê Hồng Bội từ năm 1987: software, computer networking, tư-vấn tài-chính-gia-đình" />
 <meta name="keywords" content="thành-tích, bằng-cấp, chứng-chỉ, giấy-khen, kinh-nghiệm">
 <link rel="alternate" href="https://www.lhboi.name.vn/home/cv">
@@ -67,7 +67,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -160,6 +160,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -231,15 +232,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Lê Hồng Bội</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -257,6 +251,7 @@ https://lehboi.github.io/home/cv
     </amp-facebook-like>
   </div>
 
+  <h1>Thành-tích của Lê Hồng Bội</h1>
   <h2>Kinh-nghiệm</h2>
   <p>Sử-dụng <a href="../kinh-nghiem/may-tinh/gnucash">GnuCash</a> trong <a href="/huu-ich/ke-hoach-tai-chinh/">quản-lý-tài-chính-gia đình</a> từ năm 1998.</p>
   <p>Có kỹ-năng phân-tích và giải-quyết vấn-đề.</p>
