--- a/download/index.html
+++ b/download/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Các file để chép từ Trang web LHBội</title>
+<title>Các file để chép từ website LêHBội</title>
 <meta name="description" content="Các file được chia sẻ tại website Lê Hồng Bội: các file mẫu để kiểm soát tài chính gia đình, các bài báo hay, những cuốn sách hay." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, download">
 <link rel="alternate" href="https://www.lhboi.name.vn/download/">
@@ -65,7 +65,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -126,6 +126,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -174,15 +175,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-  <div class="title">Các file để chép về</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -200,6 +194,7 @@ https://lehboi.github.io/download/
     </amp-facebook-like>
   </div>
 
+  <h1>Các file để chép từ website LêHBội</h1>
 Nhấn nút phải của chuột và chọn chép về để dùng.
 <table class="withborder">
 <tbody>
