--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Trang-web LHBội</title>
+<title>Giới-thiệu website LêHBội</title>
 <meta name="description" content="Trang-web cá-nhân Lê Hồng Bội, chia-sẻ những thông-tin hữu-ích nhằm làm cho xã-hội tốt hơn" />
 <meta name="keywords" content="hữu-ích, tài-chính-cá-nhân, đầu-tư, tiết-kiệm, làm giàu chắc-chắn">
 <link rel="alternate" href="https://www.lhboi.name.vn/">
@@ -65,7 +65,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -177,6 +177,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -248,14 +249,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
 <div class="body">
-  <div class="title">Giới-thiệu</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -273,12 +268,13 @@ data-ad-slot="5275186684">
     </amp-facebook-like>
   </div>
 
+  <h1>Giới-thiệu website LêHBội</h1>
 
   <div class="container">
     <div class="mbr-row mbr-justify-content-center">
       <div class="mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12 resizeblock vcenter">
         <div class="lrsp">
-          <h1>Tổng-quát</h1>
+          <h2>Tổng-quát</h2>
           <p class="mbr-text style display-7">
 Đây là trang-web cá-nhân của <a href="home/cv">Lê Hồng Bội</a>, nơi chia-sẻ những kiến-thức-quản-lý <a href="/huu-ich/">tài-chính-gia-đình</a>, kinh-nghiệm sử-dụng <a href="kinh-nghiem/may-tinh">máy-tính</a> và vài thứ trong <a href="kinh-nghiem/linh-tinh">cuộc-sống</a>…
 <br>Đặc-biệt nhất là công-cụ tính <a href="huu-ich/ke-hoach-tai-chinh/">lộ-trình-tài-chính tối-ưu cho suốt cuộc-đời</a>. Mỗi người đều tự tính được tổng-số tài-sản cần có ở mỗi thời-điểm trong suốt cuộc-đời, và cách <a href="huu-ich/tich-luy">tích-luỹ</a> để có số tài-sản đó.
@@ -295,14 +291,14 @@ data-ad-slot="5275186684">
     </div>
   </div>
 
-  <h1>Các nội-dung nổi-bật của website:</h1>
+  <h2>Các nội-dung nổi-bật của website:</h2>
 
   <div class="container">
     <div class="mbr-row mbr-justify-content-center">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
         <div class="lrsp">
           <a href="huu-ich/nghi-luc"><amp-img src="images/bookkeeping.jpeg" layout="responsive" height="233" width="350" alt="Ghi sổ"></amp-img></a>
-          <div class="center"><h2>Nghị-lực để có dư tiền</h2></div>
+          <div class="center"><h3>Nghị-lực để có dư tiền</h3></div>
           <p>Nghị-lực để chọn giữa sự thoả-mãn trước-mắt và lợi-ích lâu-dài.
 	  <br><a href="huu-ich/nghi-luc">Nghị-lực</a> sẽ giúp bạn lập ngân-sách, kiểm-soát chi-tiêu, tích-luỹ đầu-tư lâu-dài và trở nên giàu.
           </p>
@@ -312,7 +308,7 @@ data-ad-slot="5275186684">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
           <a href="huu-ich/hieu-qua-dau-tu"><amp-img src="images/goldcoingrow.jpg" layout="responsive" height="233" width="350" alt="Long-term investment"></amp-img></a>
-          <div class="center"><h2>Tính hiệu-quả khi đầu-tư</h2></div>
+          <div class="center"><h3>Tính hiệu-quả khi đầu-tư</h3></div>
           <p>So-sánh <a href="huu-ich/hieu-qua-dau-tu">hiệu-quả các vụ đầu-tư</a> từ năm 2002 của tôi.
           <br>Hiệu-quả của việc đầu-tư được tính bằng tốc-độ tăng tài-sản chứ không phải lượng tài-sản tăng thêm.
           </p>
@@ -322,7 +318,7 @@ data-ad-slot="5275186684">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
           <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"><amp-img src="data/VFM.png" layout="responsive" height="233" width="350" alt="Kết-quả quỹ-đầu-tư"></amp-img></a>
-          <div class="center"><h2>Gửi ngân-hàng hay quỹ-đầu-tư</h2></div>
+          <div class="center"><h3>Gửi ngân-hàng hay quỹ-đầu-tư</h3></div>
           <p>So-sánh lợi-nhuận của <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">gửi tiết-kiệm và quỹ-đầu-tư</a>.
           <br>Gửi ngân-hàng ngắn-hạn và gửi quỹ-đầu-tư dài-hạn là thích-hợp nhất.
           </p>
@@ -332,7 +328,7 @@ data-ad-slot="5275186684">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
           <a href="kinh-nghiem/may-tinh/privcloudstor"><amp-img src="images/Nextcloud_ex.png" layout="responsive" height="233" width="350" alt="Nextcloud"></amp-img></a>
-          <div class="center"><h2>Tự làm cloud storage server</h2></div>
+          <div class="center"><h3>Tự làm cloud storage server</h3></div>
           <p>Dùng một máy-tính cũ và yếu làm một <a href="kinh-nghiem/may-tinh/privcloudstor">cloud storage server</a> cho cá-nhân hoặc nhóm ít người như gia-đình với dung-lượng-lưu-trữ tuỳ theo nhu-cầu, từ vài trăm GB trở lên đến vài TB.
           </p>
         </div>
@@ -341,7 +337,7 @@ data-ad-slot="5275186684">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
           <a href="kinh-nghiem/may-tinh/protect"><amp-img src="images/fidokey.png" layout="responsive" height="233" width="350" alt="FIDO keys"></amp-img></a>
-          <div class="center"><h2>Bảo-vệ tài-sản-số</h2></div>
+          <div class="center"><h3>Bảo-vệ tài-sản-số</h3></div>
           <p>Tìm-hiểu kỹ hơn về những loại tài-sản trong thời-đại số-hoá, những rủi-ro làm mất những tài-sản đó, và <a href="kinh-nghiem/may-tinh/protect">những cách bảo-vệ</a> tài-khoản-ngân-hàng và tài-khoản-dịch-vụ-online, và cách chuyển-giao tài-sản-số lại cho người khác.
           </p>
         </div>
@@ -350,7 +346,7 @@ data-ad-slot="5275186684">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
         <div class="lrsp">
           <a href="kinh-nghiem/may-tinh/pi-network"><amp-img src="images/pi-network_ex.jpg" layout="responsive" width="350" height="233" alt="Pi"></amp-img></a>
-          <div class="center"><h2>Tiền-mật-mã Pi</h2></div>
+          <div class="center"><h3>Tiền-mật-mã Pi</h3></div>
           <p>Bài <strong><span class="red">MỚI</span></strong>: Giới-thiệu <a href="kinh-nghiem/may-tinh/pi-network">tiền-mật-mã cho mọi người: Pi</a>.
           <br>Một loại tiền-mật-mã mà mọi người trên toàn thế-giới đều dùng được một cách dễ-dàng.
           </p>
