--- a/sitemap.html
+++ b/sitemap.html
@@ -4,7 +4,7 @@
 
 <html amp lang="vi">
 <head>
-<title>Mục lục Trang web LHBội</title>
+<title>Mục-lục website LêHBội</title>
 <meta name="description" content="Mục lục website lhboi.name.vn, liên kết tới các thông in hữu ích cho tài chính cá nhân và gia đình">
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, sitemap">
 <link rel="alternate" href="https://www.lhboi.name.vn/sitemap">
@@ -64,7 +64,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -131,8 +131,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <main>
 
   <div class="body">
-    <div class="title">Mục lục</div>
-
     <div>
 <amp-social-share type="email" height="32"></amp-social-share>
 <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -147,6 +145,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     data-href="https://lehboi.github.io/sitemap" >
 </amp-facebook-like>
     </div>
+
+    <h1>Mục-lục website LêHBội</h1>
 
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
